--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,10 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="24dp"
     android:background="@drawable/background"
     tools:context=".HomeActivity">
 
@@ -14,20 +16,25 @@
         android:layout_height="wrap_content"
         android:text="Welcome!"
         android:textSize="24sp"
-        android:layout_marginTop="30dp"
-        android:layout_marginStart="10dp"
         android:textStyle="bold"
-        android:textColor="@color/white"/>
+        android:textColor="@color/white"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="30dp"/>
 
     <Button
         android:id="@+id/logout_button"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginBottom="200dp"
-        android:backgroundTint="@color/purple"
         android:text="@string/logout"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        android:backgroundTint="@color/purple"
+        android:layout_marginTop="50dp"/>
 
+    <Button
+        android:id="@+id/course_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Voir les cours"
+        android:layout_marginTop="20dp"/>
 
 </LinearLayout>
