--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="60dp"
         android:text="Learnify"
+        android:fontFamily="@font/baloo"
         android:textSize="30sp"
         android:layout_gravity="center"
         android:textStyle="bold"
@@ -32,25 +33,16 @@
         android:layout_marginTop="20dp" />
 
     <!-- Title -->
-    <TextView
-        android:id="@+id/welcomeTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Welcome to E-Learning App"
-        android:layout_marginStart="10dp"
-        android:textSize="22sp"
-        android:textStyle="bold"
-        android:gravity="center"
-        android:textColor="@color/white"
-        android:layout_marginTop="20dp" />
+
 
     <!-- Description -->
     <TextView
         android:id="@+id/welcomeDesc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Discover a new way of learning! Our app offers personalized courses, interactive lessons, and a seamless learning experience to help you grow and succeed."
-        android:textSize="15sp"
+        android:gravity="center"
+        android:text="Discover a new way of learning! Our app offers personalized courses, interactive lessons, and a seamless learning experience to help you grow."
+        android:textSize="18sp"
         android:textStyle="italic"
         android:textColor="@color/white"
 
@@ -74,12 +66,23 @@
         android:id="@+id/signupBtnW"
         android:layout_width="375dp"
         android:layout_height="wrap_content"
-        android:text="Sign Up"
+        android:text="Create an account"
         android:layout_gravity="center"
         android:textSize="16sp"
         android:layout_marginTop="16dp"
         android:backgroundTint="@color/light_blue"
         android:textColor="#FFFFFF" />
+
+    <Button
+        android:id="@+id/chatbotBtnW"
+        android:layout_width="375dp"
+        android:layout_height="wrap_content"
+        android:text="AskNova"
+        android:layout_gravity="center"
+        android:textSize="16sp"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="@color/white"
+        android:textColor="@color/navy" />
 
 
 </LinearLayout>
