--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,9 @@
     <color name="true_blue">#2D68C4</color>
     <color name="light_blue">#6395EE</color>
     <color name="purple">#5D3FD3</color>
+    <color name="colorPrimary">#2196F3</color>
+    <color name="colorPrimaryDark">#1976D2</color>
+    <color name="colorAccent">#FF4081</color>
+    <color name="userMessageBackground">#2196F3</color>
+    <color name="botMessageBackground">#F0F0F0</color>
 </resources>
